--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-  "test": "node ./test/productManagerTest.js",
-  "start": "nodemon ./src/app.js"
+    "test": "node ./test/productManagerTest.js",
+    "start": "nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "exrpess": "^0.0.1-security",
-    "nodemon": "^2.0.22"
+    "node": "^20.2.0",
+    "nodemon": "^2.0.22",
+    "shortid": "^2.2.16"
   }
 }
