--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "nuevo-intento",
   "version": "1.0.0",
-  "description": "",
+  "description": "Linea de ventas de comsmeticos",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "node ./test/productManagerTest.js",
+    "test": "nodemon ./test/productManagerTest.js",
     "start": "nodemon ./src/app.js"
   },
   "keywords": [],
@@ -13,9 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "exrpess": "^0.0.1-security",
-    "node": "^20.2.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "shortid": "^2.2.16"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "src/data/*.json"
+    ]
   }
 }
