--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
   "name": "nuevo-intento",
   "version": "1.0.0",
   "description": "Linea de ventas de comsmeticos",
-  "main": "index.js",
+  "main": "./src/app.js",
   "type": "module",
   "scripts": {
     "test": "nodemon ./test/productManagerTest.js",
-    "start": "nodemon ./src/app.js"
+    "start": "nodemon ./src/app.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "express-routemap": "^1.6.0",
+    "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "shortid": "^2.2.16"
