--- a/package.json
+++ b/package.json
@@ -13,16 +13,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "express-routemap": "^1.6.0",
-    "mongoose": "^7.3.1",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.3.4",
+    "mongoose-paginate-v2": "^1.7.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "shortid": "^2.2.16",
-    "express-handlebars": "^7.0.7",
-    "socket.io": "^4.6.2"
+    "socket.io": "^4.7.1"
   },
   "nodemonConfig": {
     "ignore": [
