--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "shortid": "^2.2.16",
     "socket.io": "^4.7.1"
