--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-routemap": "^1.6.0",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
     "mongoose-paginate-v2": "^1.7.2",
     "multer": "^1.4.5-lts.1",
