--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-compression": "^1.0.2",
     "express-handlebars": "^7.0.7",
     "express-routemap": "^1.6.0",
     "express-session": "^1.17.3",
@@ -33,9 +34,11 @@
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "shortid": "^2.2.16",
-    "socket.io": "^4.7.1"
+    "socket.io": "^4.7.1",
+    "winston": "^3.10.0"
   },
   "nodemonConfig": {
     "ignore": [
