--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^7.3.4",
     "mongoose-paginate-v2": "^1.7.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.5",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
