--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "nodemon ./src/app.js",
     "start:dev": "cross-env NODE_ENV=dev nodemon ./src/app.js",
     "start:qa": "cross-env NODE_ENV=qa nodemon ./src/app.js",
-    "start:prod": "cross-env NODE_ENV=prod nodemon ./src/app.js"
+    "start:prod": "cross-env NODE_ENV=prod nodemon ./src/app.js",
+    "test:dev": "cross-env NODE_ENV=dev mocha src/test/**/*.test.js"
   },
   "keywords": [],
   "author": "",
@@ -52,6 +53,8 @@
   },
   "devDependencies": {
     "chai": "^4.3.8",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
+    
   }
 }
